--- a/child_pages/cc-elections/Candidates/oliver.html
+++ b/child_pages/cc-elections/Candidates/oliver.html
@@ -77,6 +77,9 @@
                 military presence around the world, implementing nuclear energy to gain energy independence, imposing term limits on capitol hill, and more. However, many of his 
                 agenda items are briefly explained without a clear vision on how they will be implemented. As this site is more dedicated to local politics, we will leave it up to 
                 you to dive deeper if you're interested in him, by exploring his website and socials. 
+                You can also see him debate presidential candidates Jill Stein and Randall Terry 
+                <a href="https://rumble.com/v56o6np-free-and-equal-presidential-debate-at-freedomfest-2024.html">here</a>.
+
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.                    
               </p>
             </div>
