--- a/child_pages/cc-elections/Candidates/stein.html
+++ b/child_pages/cc-elections/Candidates/stein.html
@@ -78,6 +78,8 @@
                 a $25 minimum wage, guarantee housing as a human right, close the pay gap and end other discriminatory practices, and more. In fact, she does have quite a lengthy 
                 list of agenda items on her site, but not so much detail on how the implementation would work. Again, as this site is more focused on local politics, if you're 
                 interested in Jill Stein as a candidate, we encourage you to follow her and look into her platform for yourself.
+                You can also see her debate presidential candidates Chase Oliver and Randall Terry 
+                <a href="https://rumble.com/v56o6np-free-and-equal-presidential-debate-at-freedomfest-2024.html">here</a>.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.                    
               </p>
             </div>
