--- a/child_pages/cc-elections/us_president_2024.html
+++ b/child_pages/cc-elections/us_president_2024.html
@@ -75,10 +75,14 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">US President</h6>
           <p>
-            This year the US Presidential seat is open for re-election. After concerns about President Biden's mental decline were highlighted at the debate, the Democrat party has switched in Vice President Kamala Harris as the new nominee, and she 
-            has recently picked Minnesota Governor Tim Walz as her running mate. Former president <a href="Candidates/trump.html">Donald J. Trump</a> is the nominee for the Republicans, and recent 
-            events have given him some points in the polls. Despite not being included in the recent CNN debate, we are aware that <a href="Candidates/kennedy.html">Robert F. Kennedy Jr.</a> 
-            is also on the NJ ballot. This will probably continue to be a wild race.
+            This year the US Presidential seat is open for election. After concerns about President Biden's mental decline were highlighted at the debate, the Democrat party has switched in 
+            Vice President <a href="Candidates/harris.html">Kamala Harris</a> as the new nominee, and she has recently picked Minnesota Governor Tim Walz as her running mate. 
+            Former president <a href="Candidates/trump.html">Donald J. Trump</a> is the nominee for the Republicans. <a href="Candidates/kennedy.html">Robert F. Kennedy Jr.</a> 
+            is also on the NJ ballot, but he has recently taken his name off the ballot in several states and endorsed Donald Trump. Given that this site is mainly focused on local 
+            politics and that the presidential election generally receives lots of coverage, you may want to take a look at the 3rd party candidates if you're not happy with the 
+            candidates presented from the major 2 parties. Hopefully with advertising this site prior to early voting, you will have the chance to look into the other candidates if 
+            you wish. 
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.                    
           </p>
         </div>
     </dialog>
