presidential quick sum update

--- a/child_pages/cc-elections/us_president_2024.html
+++ b/child_pages/cc-elections/us_president_2024.html
@@ -80,8 +80,9 @@
             Former president <a href="Candidates/trump.html">Donald J. Trump</a> is the nominee for the Republicans. <a href="Candidates/kennedy.html">Robert F. Kennedy Jr.</a> 
             is also on the NJ ballot, but he has recently taken his name off the ballot in several states and endorsed Donald Trump. Given that this site is mainly focused on local 
             politics and that the presidential election generally receives lots of coverage, you may want to take a look at the 3rd party candidates if you're not happy with the 
-            candidates presented from the major 2 parties. Hopefully with advertising this site prior to early voting, you will have the chance to look into the other candidates if 
-            you wish. 
+            candidates presented from the major 2 parties. We have come across one <a href="https://rumble.com/v56o6np-free-and-equal-presidential-debate-at-freedomfest-2024.html">debate</a> with 
+            candidates Chase Oliver, Jill Stein, and Randall Terry. Hopefully with advertising this site prior to early voting, you will have the chance to look into the other candidates
+            if you wish. 
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.                    
           </p>
         </div>
