weird quote glitch fix attempt

--- a/child_pages/cc-elections/Candidates/perez.html
+++ b/child_pages/cc-elections/Candidates/perez.html
@@ -139,8 +139,8 @@
                 Direct quote from communication with Perez:
                 <br>
                 <br>
-                "I don’t have a specific agenda. However, I believe my past experience as well as my financial industry experience would be an asset to the board. I do 
-                feel the BOE’s role is to provide our staff with as much support as possible. Allowing our teaching professionals to “teach” and not get bogged down with 
+                "I don't have a specific agenda. However, I believe my past experience as well as my financial industry experience would be an asset to the board. I do 
+                feel the BOE's role is to provide our staff with as much support as possible. Allowing our teaching professionals to "teach" and not get bogged down with 
                 issues that go beyond educating our students. Also, I believe we need to provide our student population with the best education possible. Using our tax 
                 dollars to provide an education that will prepare them for higher education, heading into the workforce or military, is our most important mandate."  
             </div>
@@ -154,9 +154,9 @@
                 <br>
                 <br>
                 "My stance on issues such as fiscal responsibility, parental notification, higher test scores, school safety is to take a common sense approach. 
-                Meaning, while I understand there are mandates from the State that must be adhered to, we need to look at those policy’s that the district can or 
-                cannot implement and make changes accordingly.  Vineland School District’s needs may differ from the needs of students in North Jersey, therefore, 
-                there is not a “one size fits all” when it comes to making policy decisions for our student population."
+                Meaning, while I understand there are mandates from the State that must be adhered to, we need to look at those policy's that the district can or 
+                cannot implement and make changes accordingly.  Vineland School District's needs may differ from the needs of students in North Jersey, therefore, 
+                there is not a "one size fits all" when it comes to making policy decisions for our student population."
             </div>
             
             <br>
