typo fix perez page

--- a/child_pages/cc-elections/Candidates/perez.html
+++ b/child_pages/cc-elections/Candidates/perez.html
@@ -162,7 +162,7 @@
             <br>
             <br>
 
-            <h4 class="sub-heading">Experiene</h4>
+            <h4 class="sub-heading">Experience</h4>
             <div class="experience">
                 <ul>
                     <li>Finanial advisor in the financial industry for approximately 35 years.</li>
