vineland mayor race and other stuff

--- a/child_pages/cc-elections/Candidates/perez.html
+++ b/child_pages/cc-elections/Candidates/perez.html
@@ -102,7 +102,7 @@
          </div>
      </div>
      <div class="candidate-pic-box">
-         <img class="cover" src="../../../assets/candidates/.jpg" class="candidate-pic">
+         <img class="cover" src="../../../assets/candidates/perez.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">
