--- a/child_pages/cc-elections/vineland_mayor_2024.html
+++ b/child_pages/cc-elections/vineland_mayor_2024.html
@@ -31,6 +31,7 @@
                                 <li class="link"><a href="../cc-elections/cc_county_commissioners_2024.html">Cumberland County Commissioners</a></li>
                                 <li class="link"><a href="../cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                 <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
+                                <li class="link"><a href="../cc-elections/vineland_mayor_2024.html">Millville City Commissioners</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
                                 <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
@@ -75,13 +76,11 @@
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">House of Representatives for Congressional District 2</h6>
           <p>
-            A seat on the Lawrence Township committee is up for election this year, with incumbent Mayor Miletta and challenger Charlie Woody in the race. 
-            Miletta has been doing the job for 17 years and through our conversation with him on the phone, he seems to be very dedicated and hands on, 
-            even so far as to spend money out of pocket to help the district acquire resources. On the other hand, we haven't been able to find any 
-            information about Woody, but Miletta seems to think he is making some traction on social media, but without a comparable resume to that 
-            of Miletta.
+            This year the Vineland Mayor seat is up for election, with incumbent Mayor Fanucci and former Mayor Romano in the race. As of today, 9/6/2024, 
+            Fanucci has been very forward facing in the community and has contacted us with many details regarding his campaign, while there is very little 
+            recent information available about Romano. Unless Romano makes a case for himself, we believe it will be tough for voters to consider him over 
+            Fanucci. Perhaps more information will come in during campaign season.
                             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
-
           </p>
         </div>
     </dialog>
@@ -100,43 +99,61 @@
 
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
-                Legislative Responsibilities: Township committee members are responsible for enacting ordinances, resolutions, and regulations that govern the township. They make 
-                decisions on local laws, zoning, land use, and other matters that impact the community.
+                Chief Executive Officer: The mayor is often the chief executive officer of the city or town, responsible for overseeing the day-to-day 
+                operations of municipal government. This includes managing city departments and staff, enforcing laws and regulations, and ensuring 
+                city services such as waste collection, public safety, and public works are running smoothly.
                 <br>
                 <br>
-                Budgeting and Financial Oversight: Committee members participate in the development and approval of the township’s annual budget. This involves allocating funds to 
-                various departments, services, and projects, as well as setting tax rates and managing financial resources.
+                Policy and Legislative Leadership: In many cities, the mayor plays a significant role in setting policy direction. They may propose new 
+                laws, ordinances, and policies to the city council. The mayor may also veto council decisions, depending on the city's governance 
+                structure. In some municipalities, the mayor presides over city council meetings and can influence legislative decisions through 
+                advocacy and leadership.
                 <br>
                 <br>
-                Executive Functions: The township committee also has executive responsibilities, such as appointing key officials (like the township administrator, attorney, or engineer)
-                and overseeing the implementation of policies and ordinances. In some townships, one committee member may serve as the mayor, who presides over meetings and represents 
-                the township in official matters.
+                Budget Management: The mayor typically works with the city council and financial officers to prepare and manage the city's budget. 
+                They allocate funds to various city departments, ensuring resources are used efficiently to meet the city's needs.
                 <br>
                 <br>
-                Public Services and Infrastructure: Committee members oversee the provision of public services, including road maintenance, public safety, parks and recreation, and 
-                other essential services. They work to ensure that infrastructure projects are completed and that services are delivered efficiently.
+                Public Representation: As the public face of the local government, the mayor represents the city in public events, ceremonies, and 
+                community gatherings. The mayor often interacts with local businesses, residents, and organizations to address concerns and promote 
+                civic engagement.
                 <br>
                 <br>
-                Community Representation: As elected officials, township committee members represent the interests and concerns of the township’s residents. They engage with the 
-                community, attend public meetings, and respond to constituents' concerns to ensure that the local government is addressing the needs of the people.
+                Crisis Management: The mayor is responsible for leading the city during emergencies or crises, such as natural disasters, public 
+                health emergencies, or economic downturns. The mayor coordinates with local agencies and state or federal authorities to ensure the 
+                safety and well-being of residents.
                 <br>
                 <br>
-                Strategic Planning: Committee members are involved in long-term planning for the township, which may include land use planning, economic development initiatives, and 
-                efforts to improve the quality of life for residents.
+                Economic Development: In many cities, the mayor plays a key role in promoting economic growth by attracting new businesses, supporting 
+                local businesses, and fostering job creation. They often collaborate with business leaders, developers, and other stakeholders to boost 
+                the local economy.
                 <br>
                 <br>
-                Collaboration: In townships with a committee form of government, decisions are often made collaboratively, with members voting on important issues. The committee 
-                typically operates on a majority vote basis, where the collective input of the members shapes township policies and initiatives.
+                Law Enforcement Oversight: The mayor often has oversight of law enforcement agencies, including the police department. They may work 
+                with the police chief to ensure public safety and community relations are maintained and may have a role in addressing crime and safety 
+                concerns in the city.
+                <br>
+                <br>
+                Intergovernmental Relations: The mayor acts as a liaison between the city and other levels of government, such as state or federal 
+                authorities. They advocate for resources, grants, and support from higher levels of government to benefit their city.
+                <br>
+                <br>
+                Visionary Leadership: The mayor often sets the long-term vision for the city, working with the community to develop strategic plans for 
+                future development, sustainability, and overall improvement of the city's quality of life.
+                <br>
+                <br>
+                Appointing Officials: In some municipalities, the mayor has the authority to appoint or recommend individuals for key municipal roles, 
+                such as city managers, department heads, and members of boards and commissions.
             </details>
         </div>
 
         <button class="quick-summary-reopen">quick election summary</button>
 
         <div class="sb-top-box"> 
-            <h3>ELECTION DATE: November 7th, 2023</h3>
+            <h3>ELECTION DATE: November 5th, 2024</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
-            <h3>Lawrence Township Committee</h3>
+            <h3>Vineland Mayor</h3>
             <h4>DEMOCRATIC</h4>
             <h6>DEMOCRATA</h6>  
         </div>
@@ -167,11 +184,11 @@
             <div class="row state-senator">
                 <div class="office-title">
                     <div class="ot-english">
-                        <p>Lawrence Township Committee</p>
+                        <p>Vineland Mayor</p>
                         <p>Vote for One</p>
                     </div>
                     <div class="ot-espanol">
-                        <p>Comité del municipio de Lawrence</p>
+                        <p>Alcalde de Vineland</p>
                         <p>Vota por Uno</p>
                     </div>
                 </div>
@@ -182,7 +199,7 @@
                             
                         </div>
                         <div class="first-name">
-                            <a href="Candidates/miletta.html">Joeseph A.</a>
+                            <a href="Candidates/romano.html">Robert</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -191,7 +208,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="Candidates/miletta.html">Miletta</a>
+                            <a href="Candidates/romano.html">Romano</a>
                         </div>
                     </div>
 
@@ -237,11 +254,11 @@
                         <div class="state-senator row">
                             <div class="office-title">
                                 <div class="ot-english">
-                                    <p>Lawrence Township Committee</p>
+                                    <p>Vineland Mayor</p>
                                     <p>Vote for One</p>
                                 </div>
                                 <div class="ot-espanol">
-                                    <p>Comité del municipio de Lawrence</p>
+                                    <p>Alcalde de Vineland</p>
                                     <p>Vota por Uno</p>
                                 </div>
                             </div>
@@ -251,7 +268,7 @@
                                         <p>Republican</p> 
                                     </div>
                                     <div class="first-name">
-                                        <a href="Candidates/woody.html">Charlie N.</a>
+                                        <a href="Candidates/fanucci.html">Anthony</a>
                                     </div>
                                     <div class="number-a-and-circle"> 
                                         <p>1A</p>
@@ -260,7 +277,7 @@
                                 </div>
                                 <div class="a-row-2">
                                     <div class="last-name push-down-last-name">
-                                        <a href="Candidates/woody.html">Woody</a>
+                                        <a href="Candidates/fanucci.html">Fanucci</a>
                                     </div>
                                 </div>
             
