vineland mayor updates, vineland mayor on burger menus

--- a/child_pages/cc-elections/Candidates/romano.html
+++ b/child_pages/cc-elections/Candidates/romano.html
@@ -30,7 +30,6 @@
                                     <li class="link"><a href="../../../child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/vineland_mayor_2024.html">Millville City Commissioners</a></li>
-
                                     <li class="link"><a href="../../../child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
@@ -136,7 +135,24 @@
        
     <div class="candidate-agenda">
 
-        <h4 class="sub-heading">individual agenda</h4>
+            <h4 class="sub-heading">Upcoming Radio Time</h4>
+            <div class="agenda-thesis can-sec">
+                Listen to the former mayor speak and call in with your questions. WVLT 92.1 FM
+                <br>
+                <br>
+                10/10/24, 9-10am in spanish, 5-6pm in English
+                <br>
+                <br>
+                10/17/24, 9-10am in spanish, 5-6pm in English
+                <br>
+                <br>
+                10/24/24, 9-10am in spanish, 5-6pm in English
+                <br>
+                <br>
+                10/31/24, 9-10am in spanish, 5-6pm in English
+            </div>
+
+            <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis can-sec">
                 
             </div>
