--- a/child_pages/cc-elections/vineland_mayor_2024.html
+++ b/child_pages/cc-elections/vineland_mayor_2024.html
@@ -33,6 +33,7 @@
                                 <li class="link"><a href="../cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                 <li class="link"><a href="../cc-elections/vineland_mayor_2024.html">Millville City Commissioners</a></li>
                                 <li class="link"><a href="../cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                                <li class="link"><a href="../cc-elections/vineland_mayor_2024.html">Vineland Mayor Committee</a></li>
                                 <li class="link"><a href="../cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                 <li class="link"><a href="../cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                 <li class="link"><a href="../cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
@@ -74,13 +75,17 @@
         <div class="modal-content">
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary</h4>
-          <h6 class="page-title">House of Representatives for Congressional District 2</h6>
+          <h6 class="page-title">Vineland Mayor</h6>
           <p>
             This year the Vineland Mayor seat is up for election, with incumbent Mayor Fanucci and former Mayor Romano in the race. As of today, 9/6/2024, 
             Fanucci has been very forward facing in the community and has contacted us with many details regarding his campaign, while there is very little 
-            recent information available about Romano. Unless Romano makes a case for himself, we believe it will be tough for voters to consider him over 
-            Fanucci. Perhaps more information will come in during campaign season.
-                            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+            recent information available about Romano. Fanucci has a clear 5 point plan regarding his agenda, is aware of current issues and has a plan in 
+            place to address them, and has a solid resume of experience to back up his ability to execute. We have come across one issue regarding 
+            <a href="https://www.aol.com/state-tells-vineland-put-fired-075023140.html">lawsuits surrounding the police department</a>
+            , which seem to have been recently resolved. We were able to make contact with Romano, but he was hesitant about sharing. Unless Romano is 
+            willing to publicly make a case for himself, we believe it will be tough for voters to consider him over 
+            Fanucci. Some of that may be done in upcoming radio time, which we posted on his candidate page on this site.
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
     </dialog>
@@ -89,11 +94,11 @@
 
     <div id="sample-ballot">
 
-        <h4 class="sub-heading-ballot">What does a Township Committee Member do?</h4>
+        <h4 class="sub-heading-ballot">What does a Mayor do?</h4>
         <div class="job-description can-sec">
 
-            A township committee member serves on the governing body of a township, which is a form of municipal government commonly found in New Jersey. The roles and responsibilities 
-            of township committee members include the following:
+            The role of a mayor can vary depending on the size of the city or town and the type of municipal government, but here are the general 
+            responsibilities of a mayor:
             <br>
             <br>
 
