--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -32,6 +32,7 @@
                                     <li class="link"><a href="../../../child_pages/cc-elections/cc_county_clerk_2024.html">Cumberland County Clerk</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/millville_commissioners_2024.html">Millville City Commissioners</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/lawrence_township_committee_2024.html">Lawrence Township Committee</a></li>
+                                    <li class="link"><a href="../../../child_pages/cc-elections/vineland_mayor_2024.html">Vineland Mayor</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/bridgeton_school_board_2024.html">Bridgeton School Board</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/commercial_school_board_2024.html">Commercial Township School Board</a></li>
                                     <li class="link"><a href="../../../child_pages/cc-elections/fairfield_school_board_2024.html">Fairfield Township School Board</a></li>
