fanucci and miletta page corrections, vineland mayor burger menu corrections

--- a/child_pages/cc-elections/Candidates/fanucci.html
+++ b/child_pages/cc-elections/Candidates/fanucci.html
@@ -120,15 +120,15 @@
              </div>
 
              <div class="animal-box">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.png" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
@@ -164,7 +164,7 @@
                 Quoted directly from communication with the mayor:
                 <br>
                 <br>
-                I would say much like most city’s fiscal responsibility, business attraction/retention, job creation, infrastructure improvements, 
+                I would say much like most city's fiscal responsibility, business attraction/retention, job creation, infrastructure improvements, 
                 and public safety.  I work hard every day on these issues and have assembled an outstanding team to support our policy initiatives.   
                 Because of our business environment, we have been able to attract new development and grow the tax base.  We budget like a business so 
                 that resources are not wasted, take advantage of all grant opportunities where they exist, and look for ways to work with regional 
@@ -200,7 +200,7 @@
                 Mr. Fanucci owns and operates A.R. Fanucci Insurance and A.R. Fanucci Real Estate. He is a member of the National Association of 
                 Insurance and Financial Advisors, the National Association of Realtors, the Cumberland County Board of Realtors, the Greater Vineland 
                 Chamber of Commerce, and a former member of the United Way Foundation Board. Mayor Fanucci has been honored in many capacities throughout 
-                his professional career. He is a Cultural Award recipient, a proud member of the St. Augustine Prep Hall Fame, and a winner of the Prep’s 
+                his professional career. He is a Cultural Award recipient, a proud member of the St. Augustine Prep Hall Fame, and a winner of the Prep's 
                 prestigious Gregor Mendel Award; a recipient of the Spirit of Achievement Award from the Italian Cultural Foundation of South Jersey; a 
                 recipient of the Teach Anti-Bullying Community Award; a recipient of the Greater Vineland NAACP Unit 2115 Community Award; and is a 
                 Cumberland County Guidance Center Mental Health Distinguished Community Leader Award recipient.
