--- a/child_pages/cc-elections/Candidates/miletta.html
+++ b/child_pages/cc-elections/Candidates/miletta.html
@@ -74,9 +74,11 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Joseph A. Miletta Jr.</h6>
               <p>
-                Joseph Miletta has been in this position for 17 years while investing not only his time, but also money to help the township purchase equipment it has 
-                needed throughout the years. He prides himself on being active in his role, making sure to call everyone back who needs help from him, which his 
-                predecessors did not necessarily do. He also prides himself on being a working man who can relate to the needs of the constituents in his township. 
+                Joseph Miletta has been in this position for 17 years while investing his time to help make township repairs, donating resources like steel to help
+                help make those repairs, and donating to community resources like the fire company and rescue squad through fundraisers. 
+                He prides himself on being active in his role, making sure to call everyone back who needs help from him, which his 
+                predecessors did not necessarily do. His wife coordinates the Memorial Day parade for the township, which is one of the longest running 
+                parades in the county. He also prides himself on being a working man who can relate to the needs of the constituents in his township. 
                 He mentioned that the township only gets about 800,000 dollars in its budget, and he tries to spend it appropriately, but current laws force him to 
                 return his surplusses, where he would prefer to keep them in the township coffers as a rainy day fund for emergencies. He says he has been a democrat 
                 his whole life, but it is more of a label than a strict ideology for him, as he has been working across the aisle his whole political career. In terms, 
