--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close2' class="close">
             <div class="modal-video-box">
                 <div class="video-box-sm">
-                    <iframe class='video-container'src="https://www.youtube.com/embed/H2rQvSNB9lk?si=yTAoPWGzAmPxAQW-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <h3 class="video-heading-sm">Interview with Albert Harshaw</h3>
+                    <iframe class='video-container'src="https://www.youtube.com/watch?v=WSvZ7nOT8M0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3 class="video-heading-sm">Season Intro 2024</h3>
                     <div class="video-sm-desc">
-                        Here is a short description about the video.
+                        Watch to get an idea of the upcoming elections here in Cumberland County.
                     </div>
                 </div>
             </div>
