index banner tests 2

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id='close2' class="close">
             <div class="modal-video-box">
                 <div class="video-box-sm">
-                    <iframe class='video-container'src="https://www.youtube.com/watch?v=WSvZ7nOT8M0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class='video-container' src="https://www.youtube.com/watch?v=WSvZ7nOT8M0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h3 class="video-heading-sm">Season Intro 2024</h3>
                     <div class="video-sm-desc">
                         Watch to get an idea of the upcoming elections here in Cumberland County.
@@ -150,11 +150,11 @@
 
     <div class="cta-banner">
         <div class="cta-banner-heading">
-            
+            Season Intro 2024
         </div>
         <div class="cta-content">
             <div class="cta-text">
-                Further testing 
+                 Watch to get an idea of the upcoming elections here in Cumberland County.
             </div>
             <div class="cta-link-box">
                  <button class="hp-banner-button">Video Summary</button>
